# closure

./: AUTHORS  ChangeLog  Makefile.am  NEWS  ProjectHome.md  README  TODO  autogen.sh  configure.in  intltool-update
data/: Makefile.am  closure.desktop.in.in
src/: Makefile.am  SVGButton.py  closure.pc.in  closure.py  closure.schemas.in  closure_preferences.py  common.in.py  pref.glade
